--- a/DeltaDigital/css/main.css
+++ b/DeltaDigital/css/main.css
@@ -25,97 +25,148 @@ body {
   min-width: 320px; }
 
 /* TODO: BURGER MENU */
-/* SPECIAL CLASS */
-@-webkit-keyframes Burger__left {
-  25% {
-    left: 0%; }
-  50% {
-    left: 25%; }
-  75% {
-    left: 75%; }
-  100% {
-    left: 100%; } }
-@keyframes Burger__left {
-  25% {
-    left: 0%; }
-  50% {
-    left: 25%; }
-  75% {
-    left: 75%; }
-  100% {
-    left: 100%; } }
-
-.top-menu__menu-burger {
-  width: 100%;
-  height: 400px;
-  position: relatives; }
-
-.span {
-  width: 30px;
-  height: 20px;
-  border-top: 2px solid #fff;
-  border-bottom: 2px solid #fff;
-  margin-top: 1%;
+.top-menu__menu--burger {
   position: relative;
-  margin-bottom: 2%;
-  left: 132%;
-  z-index: 1; }
+  width: 40px;
+  height: 25px;
+  left: 130%; }
 
-.span_center {
-  border-top: 2px solid #fff;
-  left: 0%;
-  position: absolute;
-  top: 45%;
-  width: 30px;
-  -webkit-transition: all 0.5s ease-in-out;
-  -o-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out; }
-
-.left {
-  -webkit-animation: Burger__left .2s linear;
-          animation: Burger__left .2s linear;
-  left: 400%;
-  opacity: 0; }
-
-.span_first {
-  -webkit-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-          transform: rotate(45deg); }
-
-.span_second {
-  -webkit-transform: rotate(-45deg);
-      -ms-transform: rotate(-45deg);
-          transform: rotate(-45deg); }
-
-.ext {
-  border-top: 2px solid #fff;
-  position: absolute;
-  top: 42%;
-  width: 30px; }
+.menu__border {
+  border-top: 2px solid #fff; }
 
 .wrapper__items {
-  text-align: center;
-  padding: 10px 0px;
-  margin-bottom: 2% 0px;
-  text-transform: uppercase;
   color: #fff;
-  border: 1ps solid red; }
+  text-transform: uppercase;
+  text-align: center;
+  padding: 20px 15px; }
   .wrapper__items:hover {
     color: #f17f42; }
   .wrapper__items:active {
     color: #f51856; }
 
-.main_span {
-  -webkit-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-  -webkit-transform: rotate(90deg);
-      -ms-transform: rotate(90deg);
-          transform: rotate(90deg);
-  border: 2px solid transparent; }
+.burger__item {
+  border-top: 2px solid #fff;
+  width: 40px;
+  height: 3px;
+  position: absolute;
+  left: 0%; }
+  .burger__item--center {
+    top: 45.5%; }
+  .burger__item--bottom {
+    bottom: 0%; }
 
-.switch {
-  border: 2px solid transparent; }
+/* SPECIAL ANIMATE */
+@-webkit-keyframes FIRST__ANIMATION {
+  20% {
+    top: 10%; }
+  40% {
+    top: 20%; }
+  60% {
+    top: 30%; }
+  80% {
+    top: 40%; }
+  100% {
+    top: 45.5%; } }
+@keyframes FIRST__ANIMATION {
+  20% {
+    top: 10%; }
+  40% {
+    top: 20%; }
+  60% {
+    top: 30%; }
+  80% {
+    top: 40%; }
+  100% {
+    top: 45.5%; } }
+
+@-webkit-keyframes SECOND_ANIMATION_START {
+  20% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg); }
+  40% {
+    -webkit-transform: rotate(20deg);
+            transform: rotate(20deg); }
+  60% {
+    -webkit-transform: rotate(30deg);
+            transform: rotate(30deg); }
+  80% {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg); }
+  100% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg); } }
+
+@keyframes SECOND_ANIMATION_START {
+  20% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg); }
+  40% {
+    -webkit-transform: rotate(20deg);
+            transform: rotate(20deg); }
+  60% {
+    -webkit-transform: rotate(30deg);
+            transform: rotate(30deg); }
+  80% {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg); }
+  100% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg); } }
+
+@-webkit-keyframes SECOND_ANIMATION_END {
+  20% {
+    -webkit-transform: rotate(-10deg);
+            transform: rotate(-10deg); }
+  40% {
+    -webkit-transform: rotate(-20deg);
+            transform: rotate(-20deg); }
+  60% {
+    -webkit-transform: rotate(-30deg);
+            transform: rotate(-30deg); }
+  80% {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg); }
+  100% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg); } }
+
+@keyframes SECOND_ANIMATION_END {
+  20% {
+    -webkit-transform: rotate(-10deg);
+            transform: rotate(-10deg); }
+  40% {
+    -webkit-transform: rotate(-20deg);
+            transform: rotate(-20deg); }
+  60% {
+    -webkit-transform: rotate(-30deg);
+            transform: rotate(-30deg); }
+  80% {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg); }
+  100% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg); } }
+
+.top-menu__menu--burger:hover .burger__item {
+  -webkit-animation: FIRST__ANIMATION .5s linear;
+          animation: FIRST__ANIMATION .5s linear;
+  top: 45.5%; }
+
+.click_top {
+  -webkit-animation: SECOND_ANIMATION_START .5s linear;
+          animation: SECOND_ANIMATION_START .5s linear;
+  top: 45.5%;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg); }
+
+.click_bottom {
+  -webkit-animation: SECOND_ANIMATION_END .5s linear;
+          animation: SECOND_ANIMATION_END .5s linear;
+  top: 45.5%;
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg); }
 
 /* TODO: INVIS DISPLAY */
 .show {
