--- a/University/css/main.css
+++ b/University/css/main.css
@@ -715,35 +715,30 @@ body {
           border-radius: 10px 0px 0px 10px;
   min-width: 300px;
   height: auto;
-  -webkit-flex-basis: auto;
-      -ms-flex-preferred-size: auto;
-          flex-basis: auto;
-  border-top: 4px solid #fff;
+  border-top: 4px solid #666;
   border-right: 4px solid #fff; }
-  .block-match__inform {
-    position: absolute;
-    width: 450px;
-    height: 300px;
-    top: -50%;
-    left: 100%;
-    display: none;
-    text-transform: lowercase;
-    border-top: 2px solid #97d7f2;
-    text-align: left;
-    font-size: 15px;
-    page-break-after: 0px 5px;
-    font-family: "RobotoLight";
-    background-color: #323030;
-    z-index: 1; }
   .block-match__desc {
     cursor: pointer;
     font-family: "RobotoBold";
     color: #000;
     text-align: center;
-    font-size: 20px;
-    padding: 10px 0px;
+    font-size: 22px;
+    padding: 10px 5px;
     text-transform: uppercase;
-    border-bottom: 2px solid #97d7f2; }
+    border-bottom: 2px solid #fff; }
+  .block-match__inform {
+    display: none;
+    border-top: 2px solid #97d7f2;
+    text-transform: lowercase;
+    text-align: left;
+    font-size: 15px;
+    page-break-after: 0px 5px;
+    font-family: "RobotoRegular";
+    background-color: #323030;
+    z-index: 1;
+    padding: 20px;
+    -webkit-border-radius: 0 10px 10px 0;
+            border-radius: 0 10px 10px 0; }
   .block-match__item:hover .block-match__inform {
     display: block;
     opacity: 1; }
@@ -760,23 +755,23 @@ body {
     -webkit-box-align: center;
     -webkit-align-items: center;
         -ms-flex-align: center;
-            align-items: center; }
+            align-items: center;
+    text-transform: lowercase; }
   .block-match__item:hover {
     -webkit-transition: all .6s ease;
     -o-transition: all .6s ease;
     transition: all .6s ease;
-    font-size: 17px;
+    font-size: 25px;
     color: #fff;
-    background-color: #666262;
-    -webkit-border-radius: 0px 0px 0px 10px;
-            border-radius: 0px 0px 0px 10px; }
+    background-color: #595555;
+    text-transform: uppercase; }
   .block-match__item:hover .block-match__inform {
-    color: #fff;
     -webkit-transition: all .5s ease;
     -o-transition: all .5s ease;
     transition: all .5s ease; }
   .block-match__inform {
-    background-color: #666262;
+    color: #000;
+    background-color: #e3e3e3;
     -webkit-border-radius: 0px 0px 0px 10px;
             border-radius: 0px 0px 0px 10px; }
 
@@ -785,7 +780,14 @@ body {
     margin-bottom: 30px !important;
     display: block;
     width: 300px;
-    margin: 0 auto; } }
+    margin: 0 auto; }
+    .block-match__item {
+      font-size: 16px; }
+    .block-match__inform {
+      margin: 0 auto;
+      font-size: 17px; }
+    .block-match__item:hover {
+      font-size: 17px; } }
 
 @media (min-width: 768px) {
   .block-match {
@@ -801,7 +803,7 @@ body {
           -ms-flex-direction: row;
               flex-direction: row;
       font-family: space-between;
-      min-height: 300px;
+      min-height: 200px;
       -webkit-flex-wrap: wrap;
           -ms-flex-wrap: wrap;
               flex-wrap: wrap;
@@ -810,7 +812,13 @@ body {
           -ms-flex-align: start;
               align-items: flex-start; }
     .block-match__item {
-      padding: 10px 5px; } }
+      padding: 10px 5px; }
+    .block-match__inform {
+      position: absolute;
+      width: 450px;
+      height: auto;
+      top: -50%;
+      left: 100%; } }
 
 @media (min-width: 1200px) {
   .block-match {
@@ -837,7 +845,7 @@ body {
       margin: 50px auto;
       width: 1500px; }
     .block-match__item {
-      font-size: 16px; }
+      font-size: 18px; }
     .block-match__inform {
       padding: 10px 20px; } }
 
